--- a/styles/css/contato.css
+++ b/styles/css/contato.css
@@ -44,8 +44,8 @@ body {
   justify-content: center;
 }
 .sidebar-logo img {
-  width: 200px;
-  height: 200px;
+  width: 20rem;
+  height: 20rem;
 }
 .sidebar-logo h1 {
   text-align: center;
@@ -133,6 +133,133 @@ body {
   border-radius: 10px;
 }
 
+section {
+  min-height: 100vh;
+  height: 500px auto;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contato {
+  background: #146811;
+  padding: 2rem;
+  border-radius: 10px;
+  border: 2px solid #2A150D;
+  text-align: center;
+  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.contato h3 {
+  font-size: 2.4rem;
+  font-weight: 900;
+  margin: 2rem auto;
+  border: 2px solid #2A150D;
+  background: #fff00a;
+  width: fit-content;
+  padding: 0.4rem;
+  border-radius: 10px;
+  cursor: default;
+}
+.contato-email {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+.contato-email p {
+  cursor: default;
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #f2f2f2;
+}
+.contato-email button {
+  border: 2px solid #2A150D;
+  padding: 0.5rem;
+  border-radius: 10px;
+  font-size: 1.6rem;
+  transition: 0.2s linear;
+  cursor: pointer;
+}
+.contato-email button a {
+  color: #2A150D;
+}
+.contato-email button:hover {
+  color: #146811;
+  background: #fff00a;
+}
+.contato-email button i {
+  font-size: 1.6rem;
+}
+.contato-whatsapp {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+.contato-whatsapp p {
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #f2f2f2;
+  cursor: default;
+}
+.contato-whatsapp button {
+  border: 2px solid #2A150D;
+  padding: 0.5rem;
+  border-radius: 10px;
+  font-size: 1.6rem;
+  transition: 0.2s linear;
+  cursor: pointer;
+}
+.contato-whatsapp button a {
+  color: #2A150D;
+}
+.contato-whatsapp button:hover {
+  color: #146811;
+  background: #fff00a;
+}
+.contato-whatsapp button i {
+  font-size: 1.6rem;
+}
+.contato-orcamento {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+.contato-orcamento p {
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #f2f2f2;
+  cursor: default;
+}
+.contato-orcamento button {
+  border: 2px solid #2A150D;
+  padding: 0.5rem;
+  border-radius: 10px;
+  font-size: 1.6rem;
+  transition: 0.2s linear;
+  cursor: pointer;
+}
+.contato-orcamento button a {
+  color: #2A150D;
+}
+.contato-orcamento button:hover {
+  color: #146811;
+  background: #fff00a;
+}
+.contato-orcamento button i {
+  font-size: 1.6rem;
+}
+
 @media (max-width: 1100px) {
   html {
     font-size: 55%;
@@ -146,7 +273,11 @@ body {
   .sidebar {
     left: -2000px;
     width: 100%;
-    position: relative;
+    position: absolute;
+  }
+  .sidebar-logo img {
+    width: 15rem;
+    height: 15rem;
   }
   .on {
     left: 0;
