--- a/styles/css/sobre.css
+++ b/styles/css/sobre.css
@@ -44,8 +44,8 @@ body {
   justify-content: center;
 }
 .sidebar-logo img {
-  width: 200px;
-  height: 200px;
+  width: 20rem;
+  height: 20rem;
 }
 .sidebar-logo h1 {
   text-align: center;
@@ -133,6 +133,92 @@ body {
   border-radius: 10px;
 }
 
+section {
+  min-height: 100vh;
+  height: 500px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.historia {
+  margin: 10rem 2rem 5rem 2rem;
+  border-bottom: 2px solid #2A150D;
+}
+.historia h2 {
+  font-size: 2.6rem;
+  text-align: center;
+  margin: 0 0 1rem 0;
+  font-weight: 800;
+}
+.historia p {
+  max-width: 600px;
+  text-align: justify;
+  font-size: 1.6rem;
+  background: #146811;
+  color: #f2f2f2;
+  padding: 2rem;
+  border-radius: 10px;
+  border: 2px solid #2A150D;
+  margin-bottom: 3rem;
+}
+.historia p b {
+  font-size: 1.8rem;
+  font-weight: 800;
+  color: #2A150D;
+}
+
+.colaboradores {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 0 2rem 10rem 2rem;
+}
+.colaboradores h2 {
+  font-size: 2.6rem;
+  text-align: center;
+  margin: 0 0 1rem 0;
+  font-weight: 800;
+}
+.colaboradores-josue {
+  border: 2px solid #2A150D;
+  background: #146811;
+  color: #f2f2f2;
+  padding: 2rem;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+.colaboradores-josue img {
+  width: 250px;
+  height: 250px;
+  border-radius: 999px;
+}
+.colaboradores-historia-josue {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.colaboradores-historia-josue h2 {
+  font-size: 2.6rem;
+  font-weight: 800;
+  text-align: center;
+}
+.colaboradores-historia-josue h3 {
+  font-size: 1.6rem;
+  font-weight: 600;
+  text-align: center;
+}
+.colaboradores-historia-josue p {
+  max-width: 560px;
+  text-align: justify;
+  font-size: 1.6rem;
+}
+
 @media (max-width: 1100px) {
   html {
     font-size: 55%;
@@ -145,6 +231,10 @@ body {
   }
   .sidebar {
     left: -2000px;
+  }
+  .sidebar-logo img {
+    width: 15rem;
+    height: 15rem;
   }
   .on {
     left: 0;
