--- a/styles/sass/contato.sass
+++ b/styles/sass/contato.sass
@@ -41,8 +41,8 @@ body
         align-items: center
         justify-content: center
         img
-            width: 200px
-            height: 200px
+            width: 20rem
+            height: 20rem
         h1
             text-align: center
             font-family: Arial, Helvetica, sans-serif
@@ -114,6 +114,112 @@ body
         border: 2px solid variables.$txt-color
         border-radius: 10px
 
+section
+    min-height: 100vh
+    height: 500px auto
+    margin: auto
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+.contato
+    background: variables.$box-color
+    padding: 2rem
+    border-radius: variables.$btn-radius
+    border: 2px solid variables.$txt-color
+    text-align: center
+    max-width: 700px
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    gap: 2rem
+    & h3
+        font-size: 2.4rem
+        font-weight: 900
+        margin: 2rem auto
+        border: 2px solid variables.$txt-color
+        background: variables.$menu-bg-color
+        width: fit-content
+        padding: .4rem
+        border-radius: variables.$btn-radius
+        cursor: default
+    &-email
+        display: flex
+        gap: 1rem
+        justify-content: center
+        align-items: center
+        & p
+            cursor: default
+            font-size: 1.6rem
+            font-weight: 700
+            color: variables.$bg-color
+        & button
+            border: 2px solid variables.$txt-color
+            padding: .5rem
+            border-radius: variables.$btn-radius
+            font-size: 1.6rem
+            transition: .2s linear
+            cursor: pointer
+            & a
+                color: variables.$txt-color
+            &:hover
+                color: variables.$box-color
+                background: variables.$menu-bg-color
+            & i
+                font-size: 1.6rem
+    &-whatsapp
+        display: flex
+        flex-direction: column
+        gap: 1rem
+        justify-content: center
+        align-items: center
+        & p
+            font-size: 1.6rem
+            font-weight: 700
+            color: variables.$bg-color
+            cursor: default
+        & button
+            border: 2px solid variables.$txt-color
+            padding: .5rem
+            border-radius: variables.$btn-radius
+            font-size: 1.6rem
+            transition: .2s linear
+            cursor: pointer
+            & a
+                color: variables.$txt-color
+            &:hover
+                color: variables.$box-color
+                background: variables.$menu-bg-color
+            & i
+                font-size: 1.6rem
+    &-orcamento
+        display: flex
+        flex-direction: column
+        gap: 1rem
+        justify-content: center
+        align-items: center
+        & p
+            font-size: 1.6rem
+            font-weight: 700
+            color: variables.$bg-color
+            cursor: default
+        & button
+            border: 2px solid variables.$txt-color
+            padding: .5rem
+            border-radius: variables.$btn-radius
+            font-size: 1.6rem
+            transition: .2s linear
+            cursor: pointer
+            & a
+                color: variables.$txt-color
+            &:hover
+                color: variables.$box-color
+                background: variables.$menu-bg-color
+            & i
+                font-size: 1.6rem
+    
+
 @media (max-width: 1100px)
     html
         font-size: 55%
@@ -124,6 +230,10 @@ body
     .sidebar
         left: -2000px
         width: 100%
-        position: relative
+        position: absolute
+        &-logo
+            & img
+                width: 15rem
+                height: 15rem
     .on
         left: 0
