--- a/styles/sass/inicio.sass
+++ b/styles/sass/inicio.sass
@@ -41,8 +41,8 @@ body
         align-items: center
         justify-content: center
         img
-            width: 200px
-            height: 200px
+            width: 20rem
+            height: 20rem
         h1
             text-align: center
             font-family: Arial, Helvetica, sans-serif
@@ -125,6 +125,7 @@ section
     align-items: center
 
 .loc 
+    margin: 10rem 0 0 0
     display: flex
     flex-direction: column
     text-align: center
@@ -137,7 +138,6 @@ section
             font-weight: 700
             font-size: 2rem
     & button
-        
         width: fit-content
         text-align: center
         margin: auto
@@ -165,14 +165,42 @@ section
     margin: 5rem 2rem
     text-align: justify
     & p
-        max-width: 460px
+        max-width: 600px
         font-size: 1.8rem
         border: 2px solid variables.$menu-txt-color
         padding: 1.6rem
         border-radius: variables.$btn-radius
         background: #146811
         color: #f2f2f2
-
+.saiba-mais
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-itens: center
+    gap: 1.2rem
+    margin-bottom: 5rem
+    & h4
+        max-width: 580px
+        margin: auto 2rem
+        font-weight: 900
+        font-size: 2.4rem
+        text-align: center
+    & button
+        cursor: pointer
+        width: fit-content
+        margin: auto
+        padding: 1rem
+        border-radius: variables.$btn-radius
+        font-weight: 700
+        font-size: 1.8rem
+        border: 2px solid variables.$txt-color
+        transition: .2s ease-in-out
+        & i:last-child
+            color: #146811
+        &:hover
+            background: variables.$menu-bg-color
+        &:active
+            color: #146811
 @media (max-width: 420px)
     html
         font-size: 50%
@@ -199,5 +227,9 @@ section
         position: fixed
         left: -2000px
         width: 100%
+        &-logo
+            & img
+                width: 15rem
+                height: 15rem
     .on
         left: 0
