--- a/styles/sass/sobre.sass
+++ b/styles/sass/sobre.sass
@@ -41,8 +41,8 @@ body
         align-items: center
         justify-content: center
         img
-            width: 200px
-            height: 200px
+            width: 20rem
+            height: 20rem
         h1
             text-align: center
             font-family: Arial, Helvetica, sans-serif
@@ -113,6 +113,76 @@ body
         cursor: pointer
         border: 2px solid variables.$txt-color
         border-radius: 10px
+section
+    min-height: 100vh
+    height: 500px auto
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+.historia
+    margin: 10rem 2rem 5rem 2rem
+    border-bottom: 2px solid variables.$txt-color
+    h2
+        font-size: 2.6rem
+        text-align: center
+        margin: 0 0 1rem 0
+        font-weight: 800
+    p
+        max-width: 600px
+        text-align: justify
+        font-size: 1.6rem
+        background: variables.$box-color
+        color: variables.$bg-color
+        padding: 2rem
+        border-radius: variables.$btn-radius
+        border: 2px solid variables.$txt-color
+        margin-bottom: 3rem
+        & b
+            font-size: 1.8rem
+            font-weight: 800
+            color: variables.$txt-color
+.colaboradores
+    display: flex
+    flex-direction: column
+    flex-wrap: wrap
+    margin: 0 2rem 10rem 2rem
+    h2
+        font-size: 2.6rem
+        text-align: center
+        margin: 0 0 1rem 0
+        font-weight: 800
+    &-josue
+        border: 2px solid variables.$txt-color
+        background: variables.$box-color
+        color: variables.$bg-color
+        padding: 2rem
+        border-radius: variables.$btn-radius
+        display: flex
+        flex-direction: column
+        gap: 1rem
+        align-items: center
+        justify-content: center
+        img
+            width: 250px
+            height: 250px
+            border-radius: 999px
+    &-historia-josue
+        display: flex
+        flex-direction: column
+        gap: 1rem
+        h2
+            font-size: 2.6rem
+            font-weight: 800
+            text-align: center
+        h3
+            font-size: 1.6rem
+            font-weight: 600
+            text-align: center
+        p
+            max-width: 560px
+            text-align: justify
+            font-size: 1.6rem
 
 @media (max-width: 1100px)
     html
@@ -123,5 +193,9 @@ body
         display: block
     .sidebar
         left: -2000px
+        &-logo
+            & img
+                width: 15rem
+                height: 15rem
     .on
         left: 0
