--- a/styles/sass/trabalhos.sass
+++ b/styles/sass/trabalhos.sass
@@ -41,8 +41,8 @@ body
         align-items: center
         justify-content: center
         img
-            width: 200px
-            height: 200px
+            width: 20rem
+            height: 20rem
         h1
             text-align: center
             font-family: Arial, Helvetica, sans-serif
@@ -123,5 +123,9 @@ body
         display: block
     .sidebar
         left: -2000px
+        &-logo
+            & img
+                width: 15rem
+                height: 15rem
     .on
         left: 0
