--- a/styles/css/contato.css
+++ b/styles/css/contato.css
@@ -155,6 +155,7 @@ section {
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  margin: 0 2rem;
 }
 .contato h3 {
   font-size: 2.4rem;
