--- a/styles/sass/contato.sass
+++ b/styles/sass/contato.sass
@@ -134,6 +134,7 @@ section
     justify-content: center
     align-items: center
     gap: 2rem
+    margin: 0 2rem
     & h3
         font-size: 2.4rem
         font-weight: 900
