--- a/styles/sass/inicio.sass
+++ b/styles/sass/inicio.sass
@@ -185,7 +185,7 @@ section
         font-weight: 900
         font-size: 2.4rem
         text-align: center
-    & button
+    & a
         cursor: pointer
         width: fit-content
         margin: auto
@@ -193,6 +193,7 @@ section
         border-radius: variables.$btn-radius
         font-weight: 700
         font-size: 1.8rem
+        color: variables.$txt-color
         border: 2px solid variables.$txt-color
         transition: .2s ease-in-out
         & i:last-child
@@ -201,6 +202,65 @@ section
             background: variables.$menu-bg-color
         &:active
             color: #146811
+.redes-sociais
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    width: 100%
+    margin: 0 2rem 10rem 2rem
+    & h3
+        font-size: 2rem
+        text-transform: uppercase
+        background: variables.$box-color
+        padding: .6rem
+        border: 2px solid variables.$txt-color
+        border-radius: 10px 10px 0 0
+    & div
+        margin-top: -6px
+        display: flex
+        background: variables.$box-color
+        border: 2px solid variables.$txt-color
+        border-radius: 10px
+        gap: 2rem
+        padding: 1rem 2rem
+        & a
+            font-size: 4rem
+            cursor: pointer
+.fa-instagram
+    padding: .6rem
+    border-radius: variables.$btn-radius
+    background: linear-gradient(135deg, #405DE6, #5B51D8, #833AB4, #C13584,#E1306C, #FD1D1D, #F56040, #F77737, #FCAF45, #FFDC80)
+    color: variables.$bg-color
+    transition: .2s linear
+    &:hover
+        transform: translateY(-5px)
+        box-shadow: 0px 0px 4px 1px #f2f2f27c
+    &:active
+        color: #f2f2f291
+.fa-facebook
+    padding: .6rem
+    border-radius: variables.$btn-radius
+    background: #4267B2
+    color: variables.$bg-color
+    transition: .2s linear
+    &:hover
+        transform: translateY(-5px)
+        box-shadow: 0px 0px 4px 1px #f2f2f27c
+    &:active
+        color: #f2f2f291
+.fa-github
+    padding: .6rem
+    border-radius: variables.$btn-radius
+    background: #171515
+    color: variables.$bg-color
+    transition: .2s linear
+    &:hover
+        transform: translateY(-5px)
+        box-shadow: 0px 0px 4px 1px #f2f2f27c
+    &:active
+        color: #f2f2f291
+
 @media (max-width: 420px)
     html
         font-size: 50%
