--- a/styles/sass/trabalhos.sass
+++ b/styles/sass/trabalhos.sass
@@ -7,17 +7,14 @@
     text-decoration: none
     margin: 0
     list-style: none
-
 html
     font-size: 62.5%
-
 body
     overflow-x: hidden
     font-family: 'nunito'
     padding-left: 40rem
     background: variables.$bg-color
     color: variables.$txt-color
-
 .sidebar
     display: flex
     flex-direction: column
@@ -98,7 +95,6 @@ body
     border-bottom: 2px solid black
     width: fit-content
     margin: auto
-
 .mobile-btn
     display: none
     position: fixed
@@ -113,8 +109,168 @@ body
         cursor: pointer
         border: 2px solid variables.$txt-color
         border-radius: 10px
+section
+    min-height: 100vh
+    height: 500px auto
+    margin: auto
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    .trabalhos
+        margin: 10rem 2rem 10rem 2rem
+        display: flex
+        justify-content: center
+        align-items: center
+        gap: 3rem
+        flex-wrap: wrap
+        max-width: 800px
+        &-1
+            background: variables.$box-color
+            padding: 2rem
+            border-radius: variables.$btn-radius
+            text-align: center
+            & h3
+                font-size: 2.4rem
+                font-weight: 800
+                background: variables.$menu-bg-color
+                width: fit-content
+                margin: 1rem auto
+                padding: .2rem
+                border-radius: variables.$btn-radius
+                border: 2px solid variables.$txt-color
+                text-transform: uppercase
+            & p
+                margin: 1rem auto
+                font-size: 1.8rem
+                font-weight: 800
+                color: variables.$bg-color
+                border: 2px solid variables.$txt-color
+                width: fit-content
+                padding: .4rem
+                border-radius: variables.$btn-radius
+                max-width: 30rem
+            & div
+                display: flex
+                justify-content: center
+                align-items: center
+                gap: 2rem
+                & button
+                    padding: 1rem
+                    border-radius: variables.$btn-radius
+                    background: variables.$txt-color
+                    color: variables.$bg-color
+                    font-weight: 600
+                    border: 2px solid variables.$menu-bg-color
+                    cursor: pointer
+                    transition: .2s ease-in-out
+                    &:hover
+                        background: variables.$menu-bg-color
+                        border: 2px solid variables.$txt-color
+                        color: variables.$txt-color
+                    &:active
+                        color: #2a150d8e
+            & img
+                width: 30rem
+                height: 30rem
+        &-2
+            background: variables.$box-color
+            padding: 2rem
+            border-radius: variables.$btn-radius
+            text-align: center
+            & h3
+                font-size: 2.4rem
+                font-weight: 800
+                background: variables.$menu-bg-color
+                width: fit-content
+                margin: 1rem auto
+                padding: .2rem
+                border-radius: variables.$btn-radius
+                border: 2px solid variables.$txt-color
+                text-transform: uppercase
+            & p
+                margin: 1rem auto
+                font-size: 1.8rem
+                font-weight: 800
+                color: variables.$bg-color
+                border: 2px solid variables.$txt-color
+                width: fit-content
+                padding: .4rem
+                border-radius: variables.$btn-radius
+                max-width: 30rem
+            & div
+                display: flex
+                justify-content: center
+                align-items: center
+                gap: 2rem
+                & button
+                    padding: 1rem
+                    border-radius: variables.$btn-radius
+                    background: variables.$txt-color
+                    color: variables.$bg-color
+                    font-weight: 600
+                    border: 2px solid variables.$menu-bg-color
+                    cursor: pointer
+                    transition: .2s ease-in-out
+                    &:hover
+                        background: variables.$menu-bg-color
+                        border: 2px solid variables.$txt-color
+                        color: variables.$txt-color
+                    &:active
+                        color: #2a150d8e
+            & img
+                width: 30rem
+                height: 30rem
+        &-3
+            background: variables.$box-color
+            padding: 2rem
+            border-radius: variables.$btn-radius
+            text-align: center
+            & h3
+                font-size: 2.4rem
+                font-weight: 800
+                background: variables.$menu-bg-color
+                width: fit-content
+                margin: 1rem auto
+                padding: .2rem
+                border-radius: variables.$btn-radius
+                border: 2px solid variables.$txt-color
+                text-transform: uppercase
+            & p
+                margin: 1rem auto
+                font-size: 1.8rem
+                font-weight: 800
+                color: variables.$bg-color
+                border: 2px solid variables.$txt-color
+                width: fit-content
+                padding: .4rem
+                border-radius: variables.$btn-radius
+                max-width: 30rem
+            & div
+                display: flex
+                justify-content: center
+                align-items: center
+                gap: 2rem
+                & button
+                    padding: 1rem
+                    border-radius: variables.$btn-radius
+                    background: variables.$txt-color
+                    color: variables.$bg-color
+                    font-weight: 600
+                    border: 2px solid variables.$menu-bg-color
+                    cursor: pointer
+                    transition: .2s ease-in-out
+                    &:hover
+                        background: variables.$menu-bg-color
+                        border: 2px solid variables.$txt-color
+                        color: variables.$txt-color
+                    &:active
+                        color: #2a150d8e
+            & img
+                width: 30rem
+                height: 30rem
 
-@media (max-width: 1100px)
+@media (max-width: 1170px)
     html
         font-size: 55%
     body
