--- a/styles/sass/contato.sass
+++ b/styles/sass/contato.sass
@@ -147,6 +147,7 @@ section
         cursor: default
     &-email
         display: flex
+        flex-direction: column
         gap: 1rem
         justify-content: center
         align-items: center
