--- a/styles/css/contato.css
+++ b/styles/css/contato.css
@@ -170,6 +170,7 @@ section {
 }
 .contato-email {
   display: flex;
+  flex-direction: column;
   gap: 1rem;
   justify-content: center;
   align-items: center;
