--- a/styles/sass/sobre.sass
+++ b/styles/sass/sobre.sass
@@ -193,6 +193,7 @@ section
         display: block
     .sidebar
         left: -2000px
+        width: 100%
         &-logo
             & img
                 width: 15rem
