--- a/styles/sass/trabalhos.sass
+++ b/styles/sass/trabalhos.sass
@@ -278,6 +278,7 @@ section
     .mobile-btn
         display: block
     .sidebar
+        width: 100%
         left: -2000px
         &-logo
             & img
